crates/ars-components/src/specialized/timer/snapshots/ars_components__specialized__timer__tests__timer_pause_trigger_running_snapshot.snap
---
source: crates/ars-components/src/specialized/timer/mod.rs
expression: "snapshot_attrs(&countdown_api(State::Running, 30).pause_trigger_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "pause-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "timer",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Pause timer",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
