crates/ars-components/src/specialized/timer/snapshots/ars_components__specialized__timer__tests__timer_progress_idle_snapshot.snap
---
source: crates/ars-components/src/specialized/timer/mod.rs
expression: "snapshot_attrs(&api_for(State::Idle, 60_000, Mode::Countdown,\n60_000).progress_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "progress",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "timer",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Timer progress",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "100",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "0",
            ),
        ),
        (
            Aria(
                ValueNow,
            ),
            String(
                "0",
            ),
        ),
        (
            Role,
            String(
                "progressbar",
            ),
        ),
    ],
    styles: [
        (
            Custom(
                "ars-timer-progress",
            ),
            "0.00",
        ),
    ],
}
