crates/ars-components/src/specialized/timer/snapshots/ars_components__specialized__timer__tests__timer_root_paused_snapshot.snap
---
source: crates/ars-components/src/specialized/timer/mod.rs
expression: "snapshot_attrs(&api_for(State::Paused, 30_000, Mode::Countdown,\n60_000).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "timer",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "paused",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "00:30",
            ),
        ),
        (
            Aria(
                Atomic,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Live,
            ),
            String(
                "polite",
            ),
        ),
        (
            Role,
            String(
                "timer",
            ),
        ),
    ],
    styles: [],
}
