crates/ars-components/src/specialized/timer/snapshots/ars_components__specialized__timer__tests__timer_root_running_snapshot.snap
---
source: crates/ars-components/src/specialized/timer/mod.rs
expression: "snapshot_attrs(&countdown_api(State::Running, 30).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "timer",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "running",
            ),
        ),
        (
            Aria(
                Atomic,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Live,
            ),
            String(
                "polite",
            ),
        ),
        (
            Role,
            String(
                "timer",
            ),
        ),
    ],
    styles: [],
}
